	new file:   ZGame/Terrain11/tersrc19/source/inputclass.h
	new file:   ZGame/Terrain11/tersrc19/source/main.cpp
	new file:   ZGame/Terrain11/tersrc19/source/modelclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/modelclass.h
	new file:   ZGame/Terrain11/tersrc19/source/positionclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/positionclass.h
	new file:   ZGame/Terrain11/tersrc19/source/shadermanagerclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/shadermanagerclass.h
	new file:   ZGame/Terrain11/tersrc19/source/systemclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/systemclass.h
	new file:   ZGame/Terrain11/tersrc19/source/textclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/textclass.h
	new file:   ZGame/Terrain11/tersrc19/source/texture.ps
	new file:   ZGame/Terrain11/tersrc19/source/texture.vs
	new file:   ZGame/Terrain11/tersrc19/source/textureclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/textureclass.h
	new file:   ZGame/Terrain11/tersrc19/source/textureshaderclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/textureshaderclass.h
	new file:   ZGame/Terrain11/tersrc19/source/timerclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/timerclass.h
	new file:   ZGame/Terrain11/tersrc19/source/userinterfaceclass.cpp
	new file:   ZGame/Terrain11/tersrc19/source/userinterfaceclass.h

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/07/28.17_01_08.15.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/DX10/03.Init/d3dclass.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/07/29.17_29_07.67.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt
