@@ -85,8 +85,8 @@
       L396, 24:R#.18   @3ds
       L405, 25:R#.19   @znote BookList
       L408, 26:todo 深入理解nginx redis设计与实现
-     Zndex_E : //z 2015-07-29 17:13:58 L.155'24362 T411993217 .K ~525 +----+----+----+----+----+
-     TimeCnt : //z 2015-07-29 17:13:44 L.155'24376 T411993180 .K ~23  +----+----+----+----+----+
+     Zndex_E : //z 2015-07-30 10:33:44 L.154'48376 T1591256879.K ~529 +----+----+----+----+----+
+     TimeCnt : //z 2015-07-30 10:32:39 L.154'48441 T1591220914.K ~24  +----+----+----+----+----+
      Reg.Cnt : //z 2015-07-21 13:07:21 L.163'39159 T3292602638.K ~25  +----+----+----+----+----+
      #25  R+ : //z 2015-07-21 13:07:21 L.163'39159 T3292602638.K ~25    V+.501  L+.570  
      #24  R+ : //z 2015-07-16 13:06:43 L.168'39197 T1394128213.K ~24    V+.488  L+.528  
@@ -115,7 +115,8 @@
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1   +----+----+----+----+----+
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-07-29 17:13:58 L.155'24362 T411993217 .K ~550   R+.25   L+.608  --+----+
+     Version : //z 2015-07-30 10:33:44 L.154'48376 T1591256879.K ~554   R+.25   L+.613  --+----+
+     #29  V+ : //z 2015-07-30 10:32:40 L.154'48440 T1591220938.K ~551   R+.25   L+.612  
      #28  V+ : //z 2015-07-21 13:36:42 L.163'37398 T3296124531.K ~532   R+.25   L+.570  
      #27  V+ : //z 2015-07-21 13:16:25 L.163'38615 T3293752626.K ~513   R+.25   L+.579  
      #26  R+ : //z 2015-07-21 13:07:21 L.163'39159 T3292602638.K ~501   R+.25   L+.571  V+.501  
@@ -607,4 +608,8 @@ http://fw1.codeplex.com/
 //z 2015-07-29 17:13:44 L.155'24376 T411993180 .K[T23,L607,R25,V548]
 一些 game 和 dx 的例子
 http://www.toymaker.info/index.html
+
+//z 2015-07-30 10:32:39 L.154'48441 T1591220914.K[T24,L611,R25,V551]
+dx 例子，有 dx9 以及 dx11 的例子
+http://www.directxtutorial.com/default.aspx
 #endregion //z 2015-07-21 13:07:21 L.163'39159 BG57IV3@XCL T3292602638.K.F4146951713-+----+----+
